[tool.poetry]
name = "m-02-03"
version = "0.1.0"
description = "hometask #03 of the module 02"
authors = ["Andrew <sideroalogo8@gmail.com>"]
readme = "README.md"
packages = [{include = "m_02_03"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
